--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "autoprefixer": "^10.4.23",
         "framer-motion": "^11.15.0",
         "lucide-react": "^0.469.0",
-        "next": "15.1.6",
+        "next": "^16.1.6",
         "qrcode.react": "^4.2.0",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
